--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "node-sass": "^4.13.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.0"
   },
   "scripts": {
